--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -85,6 +85,10 @@
   padding: 10px;
 }
 
+.fa-camera {
+  margin-right: 10px;
+}
+
 .blue-heart {
   color: #ff7a46 !important;
 }
