--- a/app/assets/stylesheets/components/_navigation.scss
+++ b/app/assets/stylesheets/components/_navigation.scss
@@ -4,7 +4,7 @@
   padding-top: 10px;
   padding-left: 5px;
   padding-right: 5px;
-  padding-bottom: 7px;
+  padding-bottom: 12px;
   position: fixed;
   bottom: 0px;
   width: 100%;
